--- a/src/styles/Forgot.css
+++ b/src/styles/Forgot.css
@@ -98,6 +98,17 @@
     background-color: rgb(0, 215, 50);
 }
 
+.errorForgot{
+    font-size: 1.3rem;
+    margin-top: 3rem;
+    background-color: orange;
+    border-radius: 0.5rem;
+    width: fit-content;
+    padding: 1rem;
+    color: white;
+    font-weight: 700;
+}
+
 @keyframes spin {
     0% {
         transform: rotate(0deg);
