--- a/src/styles/page2.css
+++ b/src/styles/page2.css
@@ -34,7 +34,7 @@ img {
     background-image: url('../assets/Nosotros.webp');
     background-repeat: no-repeat;
     margin-left: 1rem;
-    height: 59rem;
+    height:40rem;
 
 }
 
@@ -43,14 +43,14 @@ img {
     padding-left: 6rem;
     font-family: 'Lato', sans-serif;
     font-weight: 900;
-    font-size: 5rem;
-    width: 37rem;
+    font-size: 4rem;
+    width: 100%;
     color: rgb(130, 94, 246);
 }
 
 .textp2 p {
     padding-left: 6rem;
-    font-size: 2.2rem;
+    font-size: 1.6rem;
     font-family: 'Montserrat', sans-serif;
     width: 50rem;
     color: rgb(2, 80, 116);
@@ -59,7 +59,7 @@ img {
 
 .mision h1,
 .vision h1 {
-    font-size: 5rem;
+    font-size: 3.5rem;
     font-family: 'Lato', sans-serif;
     font-weight: 700;
     color: rgb(130, 94, 246);
@@ -68,7 +68,7 @@ img {
 .mision p,
 .vision p,
 .vision2 p {
-    font-size: 1.4rem;
+    font-size: 1.3rem;
     width: 24rem;
     font-family: 'Montserrat', sans-serif;
     color: rgb(2, 80, 116);
@@ -79,7 +79,7 @@ img {
 }
 
 .vision2 {
-    padding-top: 11.2rem;
+    padding-top: 7rem;
 }
 
 .mision {
@@ -165,6 +165,10 @@ img {
     padding-top: 1rem;
     padding-bottom: 1rem;
     margin-top: 7rem;
+}
+
+.textp2 h1{
+    width: fit-content !important;
 }
 
 
@@ -471,6 +475,8 @@ img {
         margin-top: 10rem;
         width: 88%
     }
+
+  
 }
 
 @media only screen and (min-width: 1600px) and (max-width: 1800px) {
