--- a/src/styles/Membresia.css
+++ b/src/styles/Membresia.css
@@ -25,7 +25,7 @@ img {
 .precio {
     margin-top: 10rem;
     position: relative;
-    right: 5rem;
+    left: 5rem;
     top: 5rem;
     background-color: rgb(6, 87, 124);
     height: fit-content;
@@ -36,7 +36,7 @@ img {
 #calculah1 {
     font-family: 'Monserrat', sans-serif;
     font-weight: 900;
-    font-size: 4rem;
+    font-size: 3rem;
     color: rgb(0, 80, 117);
     margin: 0;
     width: max-content;
@@ -45,7 +45,7 @@ img {
 .tipoplanes h2 {
     font-family: 'Monserrat', sans-serif;
     font-weight: 400;
-    font-size: 2.5rem;
+    font-size: 2rem;
     color: rgb(0, 80, 117);
 
 }
@@ -53,7 +53,7 @@ img {
 .tipoplanes p {
     font-family: 'Monserrat', sans-serif;
     font-weight: 200;
-    font-size: 2rem;
+    font-size: 1.6rem;
     color: rgb(255, 255, 255);
     background-color: rgb(0, 80, 117);
     width: 35rem;
