--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -2,7 +2,11 @@
     font-family: 'Lato';
     box-sizing: border-box;
     flex-direction: column;
+}
 
+.separador{
+    width: 100%;
+    margin-bottom: 4rem;
 }
 
 
@@ -10,6 +14,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     width: 100%;
     margin-top: 15vh;
 }
@@ -47,7 +52,6 @@
     background-color: rgba(255, 255, 255, 0.597);
     color: rgb(112, 112, 112);
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-
 }
 
 .formlogin input::placeholder {
