--- a/src/styles/perfil.css
+++ b/src/styles/perfil.css
@@ -79,7 +79,8 @@ PROFILE
     width: 70%;
     border-radius: 1rem;
 }
-.modal{
+
+.modal {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -92,13 +93,48 @@ PROFILE
 MEMBRESIA
  */
 
+.membresia-data-container {
+    font-family: 'lato';
+    display: grid;
+    padding: 2rem;
+    border: 2px solid rgb(255, 255, 255);
+    box-shadow: 0 0 5rem rgba(0, 0, 0, 0.3);
+    border-radius: 0.5rem;
+    position: relative;
+    background-color: white;
+    bottom: 5rem;
+    gap: 1rem;
+}
 
- #add-member{
+
+
+.membresia-data-container label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    max-width: 100%;
+}
+
+.membresia-data-container h4{
+    overflow-wrap: break-word;
+    max-width: 80%;
+    
+}
+
+#walletprof{
+    grid-column: span 3;
+    text-align: center;
+    padding-left: 3rem;
+}
+
+
+#add-member {
     color: blue;
     cursor: pointer;
     grid-column: span 5;
 
- }
+}
 
 
 .membresia-container {
@@ -128,43 +164,16 @@ MEMBRESIA
     color: rgb(255, 255, 255);
 }
 
-.membresia-data-container h3 {
-    font-size: 1.3rem;
-    font-weight: 700;
-    max-width: 100%;
-    word-wrap: break-word;
 
-}
-
-.membresia-data-container h4 {
-    font-size: 1.1rem;
-    max-width: 100%;
-    word-wrap: break-word;
-}
 
 #estado {
     color: rgb(0, 192, 0);
     font-weight: 700;
 }
 
-.membresia-data-container {
-    font-family: 'lato';
-    display: grid;
-    grid-template-columns: repeat(4, 1fr) !important;
-    gap: 1rem;
-    background-color: rgb(255, 255, 255);
-    border: 2px solid rgb(255, 255, 255);
-    box-shadow: 0 0 5rem rgba(0, 0, 0, 0.3);
-    padding: 2rem;
-    position: relative;
-    bottom: 10rem;
-    border-radius: 0.5rem;
-    width: 100%;
-}
 
 
-
-.box-grid{
+.box-grid {
     max-width: 25rem;
 }
 
@@ -178,16 +187,9 @@ MEMBRESIA
     width: 100%;
 }
 
-.generalc{
-    max-width: 80%;
-}
 
-.membresia-data-container label {
-    display: flex;
-    gap: 0.5rem;
-    justify-content: center;
-    align-items: center;
-}
+
+
 
 .close {
     color: rgb(0, 0, 0);
@@ -253,6 +255,16 @@ MEMBRESIA
 }
 
 @media(max-width: 768px) {
+
+    .close{
+        margin-top: 5rem;
+        margin-bottom: 2rem;
+    }
+
+    .membresia-data-container{
+        display: flex;
+        flex-direction: column;
+    }
     .membresia-container {
         display: none;
     }
@@ -303,14 +315,7 @@ MEMBRESIA
     }
 
 
-    .membresia-data-container {
-        word-wrap: break-word;
-        max-width: 80%;
-        position: static;
-        display: flex;
-        flex-direction: column;
-        box-shadow: none;
-    }
+
 
     .close {
         font-size: 1.3rem;
@@ -325,7 +330,8 @@ MEMBRESIA
         width: 80%;
         justify-content: space-between;
         margin: 0 auto;
-        font-family: 'lato';text-align: center;
+        font-family: 'lato';
+        text-align: center;
         align-items: center;
         background-color: rgb(201, 201, 201);
         margin-bottom: 1rem;
@@ -338,7 +344,7 @@ MEMBRESIA
         max-height: 2rem;
     }
 
-    .member-simple h1{
+    .member-simple h1 {
         text-align: center;
         font-family: 'lato';
         background-color: rgb(0, 108, 108);
@@ -347,8 +353,5 @@ MEMBRESIA
         font-size: 1.5rem;
     }
 
-    .generalc{
-        max-width: 100%;
-       
-    }
+
 }
