--- a/src/styles/Verificacion.css
+++ b/src/styles/Verificacion.css
@@ -106,6 +106,20 @@
     align-items: center;
 }
 
+#selectImage{
+    color: rgb(0, 159, 0);
+    font-size: 1.2rem;
+    margin-top: 1rem;
+    font-weight: 700;
+
+}
+
+.error{
+    color: red;
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+
 @media (max-width: 768px){
     .verificacioncontainer{
         flex-direction: column;
